[package]
name = "fhe-sunscreen"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54.1", features = ["tcp", "tls", "dns", "kad", "mdns", "tokio", "noise", "yamux", "websocket", "ping", "macros"] }
futures = "0.3.31"
tokio  = { version = "1.41.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = "1.0.210"
serde_json = "1.0.1"
bincode = "1.3.3"
regex = "1.11.0"

sunscreen = { version = "*", features = ["bulletproofs"] }
seal_fhe = "0.8.1"
hex = "0.4.3"

rand_core = { version = "0.6.4", features = ["getrandom"] }
chacha20poly1305 = "0.10"
k256 = { version = "0.13.4", features = ["ecdh", "serde"] }

ecdh = { path = "../ecdh" }


