[package]
name = "fhe-zama"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { version = "0.9.0", features = [ "boolean", "shortint", "integer", "aarch64-unix" ] }
num-traits = "0.2.19"

bincode = "1.3.3"
serde = "1.0.210"
serde_json = "1.0.1"

tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
futures = "0.3"
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }

rand = "0.8.5"
blsttc = { version = "8.0.2" }
ecdh = { path = "../ecdh" }
